--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			</div>
 			<div class="card-white">
 				<h2>Etudiante en école de commerce à Nantes</h2>
-				<img src="images/LA.jpg" height="369" width="388" id="photo-rond"> 
+				<img src="images/la.jpg" height="369" width="388" id="photo-rond"> 
 			</div>
 			<div class="card-white">
 				<h2>Bonjour, je m'appelle Lou-Aven, je suis actuellement à Audencia Bachelor en filière marketing.</h2>
