--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="card-white">
 				<h3>Ce que j'aime faire</h3>
 				<p>Tester de nouveaux restaurants <br> Profiter de la vie. <br> Sourire :-) et Manger <br></p>
-				<img src="images/fille.jpg" id="fille" class="img-circle img-bordered"> 
+				<img src="images/la.jpg" id="fille" class="img-circle img-bordered"> 
 			</div>
 			<div class="card-white">
 				<h3>Mon Projet</h3>
